# config_manager

./: .env  README.md  main.py  pyproject.toml  requirements.txt  test.js
api/core/: json_orchestr.py  jsonwork.py  usercreation.py
api/endpoints/: authendpoint.py  configendpoint.py  userendpoint.py
api/models/: configscheme.py  userscheme.py
api/security/: config.py
static/: app.js  backup.css  dark_glassmorphims.css  emerald_glassmorphism.css  ironman-theme.css  ironstyle.css  login.js  peach_morphism.css  session_expired_dark_glass.css  styles.css
storage/: config.json
templates/: config.html  far.html  index.html  index_new.html  iron_man.html  session_expired.html
