[project]
name = "gleg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "authx>=1.1.2",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "uvicorn[standard]==0.24.0",
]
